--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.4",
     "luxon": "^3.4.3",
     "react": "^18.2.0",
+    "react-clock": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "semantic-ui-css": "^2.5.0",
